
<resources>

    <string name="app_name">Wifi FTP Server</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ui_title">FTP Server Service</string>
    <string name="ui_wifi_status">WiFi Status:</string>
    <string name="ui_ftp_url_value">non available</string>
    <string name="ui_port_number">Port Number:</string>
    <string name="ui_username">User Name</string>
    <string name="ui_password">Pass Word:</string>
    <string name="ui_settings">Settings</string>
    <string name="ui_start_stop">Start</string>
    <string name="ui_password_value">1234</string>
    <string name="ui_username_value">charles</string>
    <string name="ui_ftp_url">FTP URL:</string>
    <string name="ui_wifi_status_value">not connected</string>
    <string name="ui_port_number_value">2021</string>
    <string name="PortNumber">Port Number</string>
    <string name="UserName">User Name</string>
    <string name ="PassWord">Pass Word</string>
    <string name="Service_Event">Service Event</string>
    <string name="Preference_Store">Preference Store</string>
    <string name="SERVICE_MESSAGE_STATUS">SERVICE STATUS</string>
    <string name="SERVICE_MESSAGE_UP">SERVICE UP</string>
    <string name="ui_ftp_folder">FTP Folder:</string>
    <string name="ui_ftp_folder_value">/</string>
    <string name="FTPFolder">FTP Folder</string>
    <string name="Backlog">4</string>
    <string name="FTP_URL">FTP_URL</string>


</resources>

