<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#565c58"
    android:orientation="vertical" >
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:background="#ff4416c4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_title"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#ff4416c4" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_wifi_status"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wifi_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ui_wifi_status_value"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ftp_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_ftp_url"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ui_ftp_url_value"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_port_number"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/port_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ui_port_number_value"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#ff4416c4" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_username"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ui_username_value"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_password"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/passwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ui_password_value"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#ff4416c4" />
    
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_ftp_folder"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ftp_folder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ui_ftp_folder_value"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#ff4416c4" />

    <Button
        android:id="@+id/settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onSettingsClick"
        android:text="@string/ui_settings"
        android:textColor="#FFFFFF" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#ff4416c4" />

    <Button
        android:id="@+id/start_stop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_start_stop"
        android:onClick="onStartStopClick"
        android:textColor="#FFFFFF" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#ff4416c4" />

</LinearLayout>
